--- a/merchandising.html
+++ b/merchandising.html
@@ -597,7 +597,7 @@
                                                           </div>
                                                         </div>
                                                         <div class="_16sb0g4v">
-                                                          <div class="page-shell-mobile__display-none">
+                                                          <div class="_1udzt2s">
                                                             <div
                                                               class="_mmvgcv"
                                                               style="
@@ -1086,7 +1086,7 @@
                                                           </div>
                                                         </div>
                                                         <div class="_16sb0g4v">
-                                                          <div class="page-shell-mobile__display-none">
+                                                          <div class="_1udzt2s">
                                                             <div
                                                               class="_mmvgcv"
                                                               style="
@@ -1263,7 +1263,7 @@
                                                         </div>
                                                       </div>
                                                       <div class="_16sb0g4v">
-                                                        <div class="page-shell-mobile__display-none">
+                                                        <div class="_1udzt2s">
                                                           <div
                                                             class="flex-column"
                                                             style="
@@ -1540,7 +1540,7 @@
                                                           >
                                                         </div>
                                                         <div class="_16sb0g4v">
-                                                          <div class="page-shell-mobile__display-none">
+                                                          <div class="_1udzt2s">
                                                             <a
                                                               href="/s/Manila/homes?place_id=ChIJi8MeVwPKlzMRH8FpEHXV0Wk&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                               class="main_content__agenda-list-btn"
@@ -1874,7 +1874,7 @@
                                                           >
                                                         </div>
                                                         <div class="_16sb0g4v">
-                                                          <div class="page-shell-mobile__display-none">
+                                                          <div class="_1udzt2s">
                                                             <a
                                                               href="/s/Nasugbu/homes?place_id=ChIJKbyDTaWWvTMRk8HiLNcRTPA&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                               class="main_content__agenda-list-btn"
@@ -2208,7 +2208,7 @@
                                                           >
                                                         </div>
                                                         <div class="_16sb0g4v">
-                                                          <div class="page-shell-mobile__display-none">
+                                                          <div class="_1udzt2s">
                                                             <a
                                                               href="/s/Mabini/homes?place_id=ChIJLbgdokcHvTMRRITNRyJ3h2k&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                               class="main_content__agenda-list-btn"
@@ -2542,7 +2542,7 @@
                                                           >
                                                         </div>
                                                         <div class="_16sb0g4v">
-                                                          <div class="page-shell-mobile__display-none">
+                                                          <div class="_1udzt2s">
                                                             <a
                                                               href="/s/Laiya/homes?place_id=ChIJuSORkKwlvTMRdTnYpcxm8RY&amp;refinement_paths%5B%5D=%2Fhomes&amp;tab_id=home_tab"
                                                               class="main_content__agenda-list-btn"
@@ -2784,7 +2784,7 @@
                                                       </div>
                                                     </div>
                                                     <div class="_16sb0g4v">
-                                                      <div class="page-shell-mobile__display-none">
+                                                      <div class="_1udzt2s">
                                                         <div
                                                           class="flex-column"
                                                           style="
@@ -3008,7 +3008,7 @@
                                                           </div>
                                                         </div>
                                                         <div class="_16sb0g4v">
-                                                          <div class="page-shell-mobile__display-none">
+                                                          <div class="_1udzt2s">
                                                             <div
                                                               class="_mmvgcv"
                                                               style="
@@ -3287,7 +3287,7 @@
                                                           </div>
                                                         </div>
                                                         <div class="_16sb0g4v">
-                                                          <div class="page-shell-mobile__display-none">
+                                                          <div class="_1udzt2s">
                                                             <div
                                                               class="_mmvgcv"
                                                               style="
@@ -3621,7 +3621,7 @@
                                                           </div>
                                                         </div>
                                                         <div class="_16sb0g4v">
-                                                          <div class="page-shell-mobile__display-none">
+                                                          <div class="_1udzt2s">
                                                             <div
                                                               class="_rion6he"
                                                               style="
@@ -4028,7 +4028,7 @@
                                                           </div>
                                                         </div>
                                                         <div class="_16sb0g4v">
-                                                          <div class="page-shell-mobile__display-none">
+                                                          <div class="_1udzt2s">
                                                             <div
                                                               class="_mmvgcv"
                                                               style="
@@ -12882,11 +12882,7 @@
                                                   >Footer section</span
                                                 >
                                                 <section>
-<<<<<<< HEAD
-                                                  <div class="page-shell-mobile__display-none">
-=======
                                                   <div class="_1udzt2s">
->>>>>>> f28726f (rename mobile account notification)
                                                     <div class="page-shell-mobile__mb-16">
                                                       <div class="flex">
                                                         <span class="page-shell-mobile__lang-wrapper"
