--- a/dashboard.html
+++ b/dashboard.html
@@ -947,7 +947,7 @@
         }
       }
       @media (min-width: 744px) {
-        .page-shell-mobile__display-none {
+        ._1udzt2s {
           display: none !important;
         }
       }
@@ -3284,11 +3284,7 @@
                   <div class="footer__copyright">
                     <span class="text-highlight dir dir-ltr">Footer section</span>
                     <section>
-<<<<<<< HEAD
-                      <div class="page-shell-mobile__display-none">
-=======
                       <div class="_1udzt2s">
->>>>>>> f28726f (rename mobile account notification)
                         <div class="page-shell-mobile__mb-16">
                           <div class="flex">
                             <span class="page-shell-mobile__lang-wrapper"
