--- a/wishlists.html
+++ b/wishlists.html
@@ -226,7 +226,7 @@
                             </div>
                             <main id="site-content" class="relative">
                               <section>
-                                <div class="page-shell-mobile__display-none">
+                                <div class="_1udzt2s">
                                   <div id="FMP-target">
                                     <a href="/wishlists/1148602671"
                                       ><div class="main_content__details-button-wrapper">
