--- a/covidsafety.html
+++ b/covidsafety.html
@@ -1423,7 +1423,7 @@
                                             <span class="hero-banner__label"
                                               ><button
                                                 type="button"
-                                                class="_b0ybw8s"
+                                                class="app-theme__navbar-create-button"
                                                 aria-busy="false"
                                                 data-veloute="faq-q-0"
                                               >
@@ -1529,7 +1529,7 @@
                                             <span class="hero-banner__label"
                                               ><button
                                                 type="button"
-                                                class="_b0ybw8s"
+                                                class="app-theme__navbar-create-button"
                                                 aria-busy="false"
                                                 data-veloute="faq-q-1"
                                               >
@@ -1637,7 +1637,7 @@
                                             <span class="hero-banner__label"
                                               ><button
                                                 type="button"
-                                                class="_b0ybw8s"
+                                                class="app-theme__navbar-create-button"
                                                 aria-busy="false"
                                                 data-veloute="faq-q-2"
                                               >
@@ -1745,7 +1745,7 @@
                                             <span class="hero-banner__label"
                                               ><button
                                                 type="button"
-                                                class="_b0ybw8s"
+                                                class="app-theme__navbar-create-button"
                                                 aria-busy="false"
                                                 data-veloute="faq-q-3"
                                               >
