--- a/places.html
+++ b/places.html
@@ -13334,7 +13334,7 @@
                                                   <a
                                                     target="_blank"
                                                     href="/things-to-do/places/8e1a5c7f-ec8c-454b-9ff9-8727cb203794"
-                                                    class="_131n1yh"
+                                                    class="app-theme__navbar-left-menu-list-text-wrapper"
                                                     ><span class="_10i7u77"
                                                       >Country Kitchen</span
                                                     ></a
@@ -13561,7 +13561,7 @@
                                                   <a
                                                     target="_blank"
                                                     href="/things-to-do/places/da754572-026d-4f09-be25-c6120861deb0"
-                                                    class="_131n1yh"
+                                                    class="app-theme__navbar-left-menu-list-text-wrapper"
                                                     ><span class="_10i7u77"
                                                       >Moonshadows</span
                                                     ></a
@@ -13788,7 +13788,7 @@
                                                   <a
                                                     target="_blank"
                                                     href="/things-to-do/places/c8f516eb-beaf-47f6-9388-0c7c58c7622f"
-                                                    class="_131n1yh"
+                                                    class="app-theme__navbar-left-menu-list-text-wrapper"
                                                     ><span class="_10i7u77"
                                                       >Duke's Malibu</span
                                                     ></a
@@ -13992,7 +13992,7 @@
                                                   <a
                                                     target="_blank"
                                                     href="/things-to-do/places/f1d36102-0247-4443-b45e-24de1317265f"
-                                                    class="_131n1yh"
+                                                    class="app-theme__navbar-left-menu-list-text-wrapper"
                                                     ><span class="_10i7u77"
                                                       >Mastro's Ocean Club</span
                                                     ></a
