--- a/preferences.html
+++ b/preferences.html
@@ -290,7 +290,7 @@
                                           <div class="_1asnseo">
                                             <button
                                               type="button"
-                                              class="_b0ybw8s"
+                                              class="app-theme__navbar-create-button"
                                               aria-busy="false"
                                             >
                                               Edit
@@ -314,7 +314,7 @@
                                           <div class="_1asnseo">
                                             <button
                                               type="button"
-                                              class="_b0ybw8s"
+                                              class="app-theme__navbar-create-button"
                                               aria-busy="false"
                                             >
                                               Cancel
@@ -772,7 +772,7 @@
                                           <div class="_1asnseo">
                                             <button
                                               type="button"
-                                              class="_b0ybw8s"
+                                              class="app-theme__navbar-create-button"
                                               aria-busy="false"
                                             >
                                               Edit
@@ -796,7 +796,7 @@
                                           <div class="_1asnseo">
                                             <button
                                               type="button"
-                                              class="_b0ybw8s"
+                                              class="app-theme__navbar-create-button"
                                               aria-busy="false"
                                             >
                                               Cancel
@@ -1009,7 +1009,7 @@
                                           <div class="_1asnseo">
                                             <button
                                               type="button"
-                                              class="_b0ybw8s"
+                                              class="app-theme__navbar-create-button"
                                               aria-busy="false"
                                             >
                                               Edit
@@ -1031,7 +1031,7 @@
                                           <div class="_1asnseo">
                                             <button
                                               type="button"
-                                              class="_b0ybw8s"
+                                              class="app-theme__navbar-create-button"
                                               aria-busy="false"
                                             >
                                               Cancel
@@ -1999,7 +1999,7 @@
                                               <div class="_1asnseo">
                                                 <button
                                                   type="button"
-                                                  class="_b0ybw8s"
+                                                  class="app-theme__navbar-create-button"
                                                   aria-busy="false"
                                                 >
                                                   Edit
@@ -2023,7 +2023,7 @@
                                               <div class="_1asnseo">
                                                 <button
                                                   type="button"
-                                                  class="_b0ybw8s"
+                                                  class="app-theme__navbar-create-button"
                                                   aria-busy="false"
                                                 >
                                                   Cancel
@@ -2314,7 +2314,7 @@
                                               <div class="_1asnseo">
                                                 <button
                                                   type="button"
-                                                  class="_b0ybw8s"
+                                                  class="app-theme__navbar-create-button"
                                                   aria-busy="false"
                                                 >
                                                   Edit
@@ -2338,7 +2338,7 @@
                                               <div class="_1asnseo">
                                                 <button
                                                   type="button"
-                                                  class="_b0ybw8s"
+                                                  class="app-theme__navbar-create-button"
                                                   aria-busy="false"
                                                 >
                                                   Cancel
@@ -2556,7 +2556,7 @@
                                               <div class="_1asnseo">
                                                 <button
                                                   type="button"
-                                                  class="_b0ybw8s"
+                                                  class="app-theme__navbar-create-button"
                                                   aria-busy="false"
                                                 >
                                                   Edit
@@ -2580,7 +2580,7 @@
                                               <div class="_1asnseo">
                                                 <button
                                                   type="button"
-                                                  class="_b0ybw8s"
+                                                  class="app-theme__navbar-create-button"
                                                   aria-busy="false"
                                                 >
                                                   Cancel
