--- a/profile-reviews.html
+++ b/profile-reviews.html
@@ -369,13 +369,13 @@
                                   >
                                     <div class="_18lcoy3z">
                                       <div class="_lvb55za">
-                                        <div class="_sftyq0">
+                                        <div class="app-theme__navbar-profile-img-wrapper">
                                           <img
                                             alt="Jose+Angelo’s account"
                                             height="28"
                                             src="https://a0.muscache.com/im/pictures/user/c23add77-bcfd-4bb9-895f-3e41eb3dc4ca.jpg?aki_policy=profile_small"
                                             width="28"
-                                            class="_1pa4v1p"
+                                            class="app-theme__navbar-profile-img"
                                           />
                                         </div>
                                         <svg
