--- a/resources.html
+++ b/resources.html
@@ -192,7 +192,7 @@
                                                 aria-expanded="false"
                                                 aria-haspopup="true"
                                                 type="button"
-                                                class="_131n1yh"
+                                                class="app-theme__navbar-left-menu-list-text-wrapper"
                                         >
                                           <div class="_10o1uew">
                                             <div class="_pez1s5">Topics</div>
@@ -273,13 +273,13 @@
                                     <div class="_18lcoy3z">
                                       <div class="_lvb55za">
                                         <div class="_12eoduj">
-                                          <div class="_sftyq0">
+                                          <div class="app-theme__navbar-profile-img-wrapper">
                                             <img
                                               alt="Jose Angelo’s account"
                                               height="28"
                                               src="https://a0.muscache.com/im/pictures/user/c23add77-bcfd-4bb9-895f-3e41eb3dc4ca.jpg?aki_policy=profile_small"
                                               width="28"
-                                              class="_1pa4v1p"
+                                              class="app-theme__navbar-profile-img"
                                             />
                                           </div>
                                         </div>
@@ -4914,7 +4914,7 @@
                               <div class="_1ejw71e">
                                 <a
                                   href="https://community.withairbnb.com"
-                                  class="_131n1yh"
+                                  class="app-theme__navbar-left-menu-list-text-wrapper"
                                   ><div class="_91gafw">
                                     <div class="_18dgbyf">
                                       <div class="tab__content-visibility">
@@ -4971,7 +4971,7 @@
                               <div class="_1ejw71e">
                                 <a
                                   href="/help/hosting-experiences"
-                                  class="_131n1yh"
+                                  class="app-theme__navbar-left-menu-list-text-wrapper"
                                   ><div class="_91gafw">
                                     <div class="_18dgbyf">
                                       <div class="tab__content-visibility">
