--- a/dashboard.html
+++ b/dashboard.html
@@ -42,10 +42,10 @@
         min-height: -moz-calc(100vh - 560px) !important;
         min-height: calc(100vh - 560px) !important;
       }
-      ._18t1hph {
+      .app-theme__navbar {
         height: 65px !important;
       }
-      ._etlemv {
+      .app-theme__navbar-wrapper {
         -webkit-box-pack: justify !important;
         -ms-flex-pack: justify !important;
         background: #ffffff !important;
@@ -62,7 +62,7 @@
         -webkit-justify-content: space-between !important;
         justify-content: space-between !important;
       }
-      ._1pkgwdx {
+      .app-theme__navbar-left-menu {
         list-style: none !important;
         margin-bottom: 0px !important;
         padding-left: 0px !important;
@@ -73,11 +73,11 @@
         display: -webkit-flex !important;
         display: flex !important;
       }
-      ._s4plha {
+      .app-theme__navbar-left-logo-wrapper {
         border-right: 1px solid #e4e4e4 !important;
         margin-right: 5px !important;
       }
-      ._wwqdbh {
+      .app-theme__navbar-create-wrapper {
         -webkit-box-flex: 1 !important;
         -ms-flex-positive: 1 !important;
         -webkit-box-pack: end !important;
@@ -92,11 +92,11 @@
         -webkit-flex-grow: 1 !important;
         flex-grow: 1 !important;
       }
-      ._vwled5 {
+      .app-theme__navbar-left-logo-icon-wrapper {
         font-size: 23px !important;
         letter-spacing: -0.58px !important;
       }
-      ._bzfhend {
+      .app-theme__navbar-left-logo-btn {
         -webkit-appearance: none !important;
         -moz-appearance: none !important;
         appearance: none !important;
@@ -118,13 +118,13 @@
         display: inline-block !important;
         vertical-align: bottom !important;
       }
-      ._bzfhend:active {
+      .app-theme__navbar-left-logo-btn:active {
         outline: 0px !important;
       }
-      ._bzfhend:focus {
+      .app-theme__navbar-left-logo-btn:focus {
         text-decoration: none !important;
       }
-      ._bzfhend:hover {
+      .app-theme__navbar-left-logo-btn:hover {
         text-decoration: none !important;
       }
       
@@ -139,7 +139,7 @@
         -webkit-align-self: center !important;
         align-self: center !important;
       }
-      ._1yyhqk0 {
+      .app-theme__navbar-left-menu-list {
         padding-top: 0px !important;
         padding-right: 15px !important;
         padding-bottom: 0px !important;
@@ -174,7 +174,7 @@
         background: #008489 !important;
         z-index: 1999 !important;
       }
-      ._131n1yh {
+      .app-theme__navbar-left-menu-list-text-wrapper {
         background: transparent !important;
         border: none !important;
         color: inherit !important;
@@ -189,7 +189,7 @@
         -ms-touch-action: manipulation !important;
         touch-action: manipulation !important;
       }
-      ._13xhdjz2 {
+      .app-theme__navbar-left-menu-list-text {
         padding: 23px 0px !important;
         margin: 0px 4px !important;
         position: relative !important;
@@ -198,7 +198,7 @@
         line-height: 18px !important;
         color: #222222 !important;
       }
-      ._13xhdjz2:hover::after {
+      .app-theme__navbar-left-menu-list-text:hover::after {
         content: '' !important;
         display: block !important;
         width: 100% !important;
@@ -231,11 +231,11 @@
         font-size: 10px !important;
         min-width: 15px !important;
       }
-      ._11zym6z {
+      .app-theme__navbar-profile-wrapper {
         padding: 0px 8px !important;
         position: relative !important;
       }
-      ._4syaavn {
+      .app-theme__navbar-profile-btn {
         -webkit-appearance: none !important;
         -moz-appearance: none !important;
         appearance: none !important;
@@ -257,10 +257,10 @@
         position: relative !important;
         text-decoration: none !important;
       }
-      ._4syaavn:active {
+      .app-theme__navbar-profile-btn:active {
         outline: 0px !important;
       }
-      ._4syaavn:hover::after {
+      .app-theme__navbar-profile-btn:hover::after {
         content: '' !important;
         display: block !important;
         width: 28px !important;
@@ -271,7 +271,7 @@
         background: #008489 !important;
         z-index: 1999 !important;
       }
-      ._sftyq0 {
+      .app-theme__navbar-profile-img-wrapper {
         background-color: #f2f2f2 !important;
         box-shadow: 0 0 0 2px #ebebeb !important;
         border-radius: 50% !important;
@@ -281,7 +281,7 @@
         width: 28px !important;
         height: 28px !important;
       }
-      ._1pa4v1p {
+      .app-theme__navbar-profile-img {
         vertical-align: top !important;
       }
       ._14zmyw6 {
@@ -2327,14 +2327,14 @@
       <div dir="ltr">
         <div data-theme="" class="app-theme">
           <div>
-            <div class="_18t1hph">
+            <div class="app-theme__navbar">
               <header>
-                <div class="_etlemv">
-                  <ul class="_1pkgwdx">
+                <div class="app-theme__navbar-wrapper">
+                  <ul class="app-theme__navbar-left-menu">
                     <li>
-                      <div class="_s4plha">
-                        <button class="_bzfhend" type="button">
-                          <span class="_vwled5" aria-hidden="true"
+                      <div class="app-theme__navbar-left-logo-wrapper">
+                        <button class="app-theme__navbar-left-logo-btn" type="button">
+                          <span class="app-theme__navbar-left-logo-icon-wrapper" aria-hidden="true"
                             ><div class="flex">
                               <div class="flex-item">
                                 <div style="margin-right: 0px">
@@ -2366,40 +2366,40 @@
                       </div>
                     </li>
                     <li>
-                      <div class="_1yyhqk0">
+                      <div class="app-theme__navbar-left-menu-list">
                         <a
                           aria-current="page"
                           href="dashboard.html"
-                          class="_131n1yh"
+                          class="app-theme__navbar-left-menu-list-text-wrapper"
                           ><div class="_ywzjut3">Dashboard</div></a
                         >
                       </div>
                     </li>
                     <li>
-                      <div class="_1yyhqk0">
-                        <a href="calendar.html" class="_131n1yh"
-                          ><div class="_13xhdjz2">Calendar</div></a
+                      <div class="app-theme__navbar-left-menu-list">
+                        <a href="calendar.html" class="app-theme__navbar-left-menu-list-text-wrapper"
+                          ><div class="app-theme__navbar-left-menu-list-text">Calendar</div></a
                         >
                       </div>
                     </li>
                     <li>
-                      <div class="_1yyhqk0">
-                        <a href="inbox.html" class="_131n1yh"
-                          ><div class="_13xhdjz2">Inbox</div></a
+                      <div class="app-theme__navbar-left-menu-list">
+                        <a href="inbox.html" class="app-theme__navbar-left-menu-list-text-wrapper"
+                          ><div class="app-theme__navbar-left-menu-list-text">Inbox</div></a
                         >
                       </div>
                     </li>
                     <li>
-                      <div class="_1yyhqk0">
-                        <a href="experiences.html" class="_131n1yh"
-                          ><div class="_13xhdjz2">Experiences</div></a
+                      <div class="app-theme__navbar-left-menu-list">
+                        <a href="experiences.html" class="app-theme__navbar-left-menu-list-text-wrapper"
+                          ><div class="app-theme__navbar-left-menu-list-text">Experiences</div></a
                         >
                       </div>
                     </li>
                     <li>
-                      <div class="_1yyhqk0">
-                        <a href="insights.html" class="_131n1yh"
-                          ><div class="_13xhdjz2">
+                      <div class="app-theme__navbar-left-menu-list">
+                        <a href="insights.html" class="app-theme__navbar-left-menu-list-text-wrapper"
+                          ><div class="app-theme__navbar-left-menu-list-text">
                             Insights<strong class="_josukr"
                               ><strong class="_19pdp32f">NEW</strong></strong
                             >
@@ -2408,20 +2408,20 @@
                       </div>
                     </li>
                     <li>
-                      <div class="_1yyhqk0">
-                        <a href="#" class="_131n1yh"
-                          ><div class="_13xhdjz2">Resources</div></a
+                      <div class="app-theme__navbar-left-menu-list">
+                        <a href="#" class="app-theme__navbar-left-menu-list-text-wrapper"
+                          ><div class="app-theme__navbar-left-menu-list-text">Resources</div></a
                         >
                       </div>
                     </li>
                   </ul>
-                  <section class="_wwqdbh">
+                  <section class="app-theme__navbar-create-wrapper">
                     <div>
-                      <div class="_ft110s">
+                      <div class="app-theme__navbar-create-btn-wrapper">
                         <span
                           ><button
                             type="button"
-                            class="_b0ybw8s"
+                            class="app-theme__navbar-create-button"
                             aria-busy="false"
                             data-veloute="create-experience-button"
                           >
@@ -2432,21 +2432,21 @@
                     </div>
                   </section>
                   <div>
-                    <div class="_11zym6z">
+                    <div class="app-theme__navbar-profile-wrapper">
                       <div>
                         <button
-                          class="_4syaavn"
+                          class="app-theme__navbar-profile-btn"
                           aria-label="Open hosting menu"
                           type="button"
                         >
                           <div aria-hidden="true">
-                            <div class="_sftyq0">
+                            <div class="app-theme__navbar-profile-img-wrapper">
                               <img
                                 alt="Profile"
                                 height="28"
                                 src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png"
                                 width="28"
-                                class="_1pa4v1p"
+                                class="app-theme__navbar-profile-img"
                               />
                             </div>
                           </div>
@@ -2486,7 +2486,7 @@
                         <span
                           ><button
                             type="button"
-                            class="_b0ybw8s"
+                            class="app-theme__navbar-create-button"
                             aria-haspopup="true"
                             aria-busy="false"
                           >
