--- a/login-security.html
+++ b/login-security.html
@@ -305,7 +305,7 @@
                                                   <div class="_1asnseo">
                                                     <button
                                                       type="button"
-                                                      class="_b0ybw8s"
+                                                      class="app-theme__navbar-create-button"
                                                       aria-busy="false"
                                                     >
                                                       Update
@@ -329,7 +329,7 @@
                                                   <div class="_1asnseo">
                                                     <button
                                                       type="button"
-                                                      class="_b0ybw8s"
+                                                      class="app-theme__navbar-create-button"
                                                       aria-busy="false"
                                                     >
                                                       Cancel
@@ -548,7 +548,7 @@
                                                 <span class="hero-banner__description"
                                                   ><button
                                                     type="button"
-                                                    class="_b0ybw8s"
+                                                    class="app-theme__navbar-create-button"
                                                     aria-busy="false"
                                                   >
                                                     <div class="_ba3mo2p">
@@ -593,7 +593,7 @@
                                                 <span class="hero-banner__description"
                                                   ><button
                                                     type="button"
-                                                    class="_b0ybw8s"
+                                                    class="app-theme__navbar-create-button"
                                                     aria-busy="false"
                                                   >
                                                     <div class="_ba3mo2p">
@@ -677,7 +677,7 @@
                                                     <span class="hero-banner__description"
                                                       ><button
                                                         type="button"
-                                                        class="_b0ybw8s"
+                                                        class="app-theme__navbar-create-button"
                                                         aria-busy="false"
                                                       >
                                                         <div class="_ba3mo2p">
@@ -740,7 +740,7 @@
                                                     <span class="hero-banner__description"
                                                       ><button
                                                         type="button"
-                                                        class="_b0ybw8s"
+                                                        class="app-theme__navbar-create-button"
                                                         aria-busy="false"
                                                       >
                                                         <div class="_ba3mo2p">
@@ -803,7 +803,7 @@
                                                     <span class="hero-banner__description"
                                                       ><button
                                                         type="button"
-                                                        class="_b0ybw8s"
+                                                        class="app-theme__navbar-create-button"
                                                         aria-busy="false"
                                                       >
                                                         <div class="_ba3mo2p">
@@ -868,7 +868,7 @@
                                                     <span class="hero-banner__description"
                                                       ><button
                                                         type="button"
-                                                        class="_b0ybw8s"
+                                                        class="app-theme__navbar-create-button"
                                                         aria-busy="false"
                                                       >
                                                         <div class="_ba3mo2p">
@@ -934,7 +934,7 @@
                                                     <span class="hero-banner__description"
                                                       ><button
                                                         type="button"
-                                                        class="_b0ybw8s"
+                                                        class="app-theme__navbar-create-button"
                                                         aria-busy="false"
                                                       >
                                                         <div class="_ba3mo2p">
@@ -1438,7 +1438,7 @@
                                                     <div class="_1asnseo">
                                                       <button
                                                         type="button"
-                                                        class="_b0ybw8s"
+                                                        class="app-theme__navbar-create-button"
                                                         aria-busy="false"
                                                       >
                                                         Update
@@ -1462,7 +1462,7 @@
                                                     <div class="_1asnseo">
                                                       <button
                                                         type="button"
-                                                        class="_b0ybw8s"
+                                                        class="app-theme__navbar-create-button"
                                                         aria-busy="false"
                                                       >
                                                         Cancel
@@ -1697,7 +1697,7 @@
                                                   <span class="hero-banner__description"
                                                     ><button
                                                       type="button"
-                                                      class="_b0ybw8s"
+                                                      class="app-theme__navbar-create-button"
                                                       aria-busy="false"
                                                     >
                                                       <div class="_ba3mo2p">
@@ -1742,7 +1742,7 @@
                                                   <span class="hero-banner__description"
                                                     ><button
                                                       type="button"
-                                                      class="_b0ybw8s"
+                                                      class="app-theme__navbar-create-button"
                                                       aria-busy="false"
                                                     >
                                                       <div class="_ba3mo2p">
@@ -1830,7 +1830,7 @@
                                                       <span class="hero-banner__description"
                                                         ><button
                                                           type="button"
-                                                          class="_b0ybw8s"
+                                                          class="app-theme__navbar-create-button"
                                                           aria-busy="false"
                                                         >
                                                           <div class="_ba3mo2p">
@@ -1895,7 +1895,7 @@
                                                       <span class="hero-banner__description"
                                                         ><button
                                                           type="button"
-                                                          class="_b0ybw8s"
+                                                          class="app-theme__navbar-create-button"
                                                           aria-busy="false"
                                                         >
                                                           <div class="_ba3mo2p">
@@ -1960,7 +1960,7 @@
                                                       <span class="hero-banner__description"
                                                         ><button
                                                           type="button"
-                                                          class="_b0ybw8s"
+                                                          class="app-theme__navbar-create-button"
                                                           aria-busy="false"
                                                         >
                                                           <div class="_ba3mo2p">
@@ -2027,7 +2027,7 @@
                                                       <span class="hero-banner__description"
                                                         ><button
                                                           type="button"
-                                                          class="_b0ybw8s"
+                                                          class="app-theme__navbar-create-button"
                                                           aria-busy="false"
                                                         >
                                                           <div class="_ba3mo2p">
@@ -2095,7 +2095,7 @@
                                                       <span class="hero-banner__description"
                                                         ><button
                                                           type="button"
-                                                          class="_b0ybw8s"
+                                                          class="app-theme__navbar-create-button"
                                                           aria-busy="false"
                                                         >
                                                           <div class="_ba3mo2p">
