rename calendar content

--- a/calendar.html
+++ b/calendar.html
@@ -895,7 +895,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="_1xeokus">
+                  <div class="calendar-section">
                     <section aria-label="Month calendar" class="main_content__body-center">
                       <div data-testid="calendar-grid" class="rbc-calendar">
                         <div class="_a5dd69">
